--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -4,6 +4,8 @@ $grey: rgba(0, 0, 0, 0.54);
 $light-grey: #dadce0;
 $vue-green: #42b883;
 $vue-navy: #35495e;
+$red: #e60023;
+$red-hover: rgba(230, 0, 35, 0.8);
 
 $fz-base: 16px;
 $fz-xs: 12px;
@@ -17,6 +19,6 @@ $ff-base: system, -apple-system, BlinkMacSystemFont, Roboto, 'Helvetica Neue', '
 
 $transition: all 0.2s ease-in-out;
 
-$radius: 8px;
+$radius: 4px;
 
 $shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.3), 0 2px 6px 2px rgba(60, 64, 67, 0.15);
