Stupid rate limit is holding me back

--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -1,9 +1,6 @@
 $white: #ffffff;
-$black: #202124;
-$grey: rgba(0, 0, 0, 0.54);
-$light-grey: #dadce0;
-$vue-green: #42b883;
-$vue-navy: #35495e;
+$black: #000000;
+$grey: #efefef;
 $red: #e60023;
 $red-hover: rgba(230, 0, 35, 0.8);
 
