Get things working

--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -1,6 +1,7 @@
 $white: #ffffff;
-$black: #000000;
+$black: #333333;
 $grey: #efefef;
+$dark-grey: #dddddd;
 $red: #e60023;
 $red-hover: rgba(230, 0, 35, 0.8);
 
@@ -9,7 +10,7 @@ $fz-xs: 12px;
 $fz-sm: 14px;
 $fz-md: 18px;
 $fz-lg: 20px;
-$fz-xl: 24px;
+$fz-xl: 30px;
 
 $ff-base: system, -apple-system, BlinkMacSystemFont, Roboto, 'Helvetica Neue', 'Segoe UI', Arial,
   sans-serif;
