--- a/client/src/styles/_global.scss
+++ b/client/src/styles/_global.scss
@@ -33,6 +33,7 @@ h4,
 h5,
 h6 {
   margin-top: 0;
+  margin-bottom: 10px;
 }
 
 a {
@@ -41,6 +42,8 @@ a {
   text-decoration: none;
   text-decoration-skip-ink: auto;
   transition: $transition;
+  padding: 8px 16px;
+  border-radius: $radius;
 }
 
 button {
@@ -80,9 +83,85 @@ img {
   width: 100%;
   max-width: 100%;
   vertical-align: middle;
+  border-radius: $radius;
 }
 
 p,
 pre {
   margin: 0 0 10px;
+}
+
+.container {
+  padding: 50px;
+
+  header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 50px;
+    text-align: center;
+
+    h1 {
+      font-size: $fz-xl;
+    }
+
+    a {
+      background-color: $grey;
+      color: $black;
+      font-weight: 700;
+      font-size: $fz-sm;
+      display: flex;
+      align-items: center;
+      width: max-content;
+      margin-top: 20px;
+
+      &:hover,
+      &:focus {
+        background-color: $dark-grey;
+      }
+
+      svg {
+        max-width: 12px;
+        margin-left: 10px;
+      }
+    }
+  }
+
+  ul.grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-gap: 30px;
+    width: 100%;
+    padding: 50px;
+
+    li {
+      border: 1px solid $grey;
+      border-radius: $radius;
+
+      a {
+        width: 100%;
+        padding: 10px;
+        border-radius: $radius;
+
+        &:hover,
+        &:focus {
+          background: $grey;
+        }
+
+        h2 {
+          font-size: $fz-md;
+          margin-bottom: 0;
+        }
+
+        p {
+          margin: 0;
+          font-size: $fz-sm;
+        }
+
+        img {
+          border: 1px solid $grey;
+        }
+      }
+    }
+  }
 }
