--- a/client/src/styles/_global.scss
+++ b/client/src/styles/_global.scss
@@ -100,34 +100,30 @@ pre {
   padding: 50px;
 
   header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 50px;
-    text-align: center;
+    margin: 50px 0 70px;
 
     h1 {
       font-size: $fz-xl;
     }
 
     a {
-      background-color: $grey;
+      background-color: transparent;
       color: $black;
       font-weight: 700;
       font-size: $fz-sm;
       display: flex;
       align-items: center;
       width: max-content;
-      margin-top: 20px;
+      border-radius: 30px;
+      padding: 10px 15px;
 
       &:hover,
       &:focus {
-        background-color: $dark-grey;
+        background-color: $grey;
       }
 
       svg {
         max-width: 12px;
-        margin-left: 10px;
       }
     }
   }
@@ -137,7 +133,6 @@ pre {
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-gap: 30px;
     width: 100%;
-    padding: 50px;
 
     li {
       border: 1px solid $grey;
