More css updates

--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -1,7 +1,8 @@
 $white: #ffffff;
 $black: #333333;
 $grey: #efefef;
-$dark-grey: #dddddd;
+$medium-grey: #dddddd;
+$dark-grey: #8e8e8e;
 $red: #e60023;
 $red-hover: rgba(230, 0, 35, 0.8);
 
