--- a/client/src/styles/_global.scss
+++ b/client/src/styles/_global.scss
@@ -48,6 +48,7 @@ a {
   transition: $transition;
   padding: 8px 16px;
   border-radius: $radius;
+  font-weight: 700;
 }
 
 button {
@@ -55,6 +56,7 @@ button {
   outline: 0;
   cursor: pointer;
   transition: $transition;
+  font-weight: 700;
 }
 
 input,
@@ -94,22 +96,27 @@ img {
 p,
 pre {
   margin: 0 0 10px;
+  color: $dark-grey;
 }
 
 .container {
   padding: 50px;
+
+  @include smallerThan480 {
+    padding: 25px;
+  }
 
   header {
     margin: 50px 0 70px;
 
     h1 {
       font-size: $fz-xl;
+      line-height: 1.2;
     }
 
     a {
       background-color: transparent;
       color: $black;
-      font-weight: 700;
       font-size: $fz-sm;
       display: flex;
       align-items: center;
@@ -130,7 +137,7 @@ pre {
 
   ul.grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     grid-gap: 30px;
     width: 100%;
 
