--- a/client/src/styles/_global.scss
+++ b/client/src/styles/_global.scss
@@ -147,6 +147,7 @@ pre {
 
       a {
         width: 100%;
+        height: 100%;
         padding: 10px;
         border-radius: $radius;
 
@@ -157,12 +158,14 @@ pre {
 
         h2 {
           font-size: $fz-md;
+          line-height: 1.2;
           margin-bottom: 0;
         }
 
         p {
           margin: 0;
           font-size: $fz-sm;
+          font-weight: 400;
         }
 
         img {
